--- a/pages/students/e19/e19505.html
+++ b/pages/students/e19/e19505.html
@@ -13,13 +13,13 @@ current_affiliation: Department of Computer Engineering, University of Peradeniy
 full_name: Witharana S.P.M. 
 name_with_initials: Witharana S.P.M. 
 preferred_short_name: Witharana S.P.M. 
-preferred_long_name: #
-honorific: #
+preferred_long_name: Sapuni Witharana
+honorific: Miss.
 
 email_faculty: e19505@eng.pdn.ac.lk
-email_personal: #
+email_personal: sapuni99witharana@gmail.com
 
-location: #
+location: kandy
 
 url_cv: #
 url_website: #
